--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
 	<h1>hello world</h1>
 	<p>this is a p</p>
+	<p>what the hell man...</p>
 	<form name="contact" netlify>
   		<p>
     		<label>Name <input type="text" name="name" /></label>
