--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 	<h1>hello world</h1>
 	<p>this is a p</p>
 	<p>what the hell man...</p>
+	<p>why has it created a new folder???</p>
+	<p>man...</p>
 	<form name="contact" netlify>
   		<p>
     		<label>Name <input type="text" name="name" /></label>
