--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <html lang="en">
 <head>
+	<meta charset="utf-8">
 	<title>This is a Netlify test site</title>
 	<style type="text/css">
 		h1 {
 			color:  red;
 		}
 	</style>
+	<script src="https://code.jquery.com/jquery-3.5.0.js"></script>
+
 </head>
 
 <body>
