--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
 		h1 {
 			color:  red;
 		}
+		#here-it-is {
+			background:  yellow;
+			height:  100px;
+		}
 	</style>
-	<script src="https://code.jquery.com/jquery-3.5.0.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
 
 </head>
 
@@ -28,6 +33,16 @@
     		<button type="submit">Send</button>
   		</p>
 	</form>
+
+	<div id="here-it-is"></div>
+
+	<script type="text/javascript">
+		$(function(){
+			$("#here-it-is").load("sample.html");
+		});
+	</script>
+
+
 
 </body>
 </html>
