--- a/admin/index.html
+++ b/admin/index.html
@@ -6,6 +6,7 @@
   	<title>Content Manager</title>
 </head>
 <body>
+	<p>gol darnit...</p>
 	<!-- Include the script that builds the page and powers Netlify CMS -->
   	<script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
 </body>
